--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
         </div>
 
         <!-- Display the poster image -->
-        <img src="{{ url_for('static', filename='poster.jpg') }}" alt="Mic Masters Camp Poster" class="poster">
+        <!-- <img src="{{ url_for('static', filename='poster.jpg') }}" alt="Mic Masters Camp Poster" class="poster"> -->
+        <img src="static/poster.jpg" alt="Mic Masters Camp Poster" class="poster">
 
         <h3>Sessions: 1 PM - 4 PM</h3>
         <p><strong>Batch 1:</strong> August 4th - 8th</p>
